<resources>
    <string name="app_name">PortDuSaguenay</string>
    <string name="title_activity_course_creation_map">CourseCreationMap</string>
    <string name="sign">S\'INSCRIRE</string>
    <string name="sign_in">S\'INSCRIRE</string>
    <string name="log">SE CONNECTER</string>
    <string name="next">CONTINUER</string>
    <string name="forgot">MOT DE PASSE OUBLIÉ</string>
    <string name="course">Parcours</string>
    <string name="history">Historique</string>
    <string name="profil">Profil</string>
    <string name="notification">Notification</string>
    <string name="settings">Paramètres</string>
    <string name="search">Recherche</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulté :</string>
    <string name="interests">Interêts</string>
    <string name="rating">Evaluations</string>
    <string name="disponibility">Disponibilitée</string>
    <string name="times">Times</string>
    <string name="chat">Chat</string>
    <string name="photos">Photos</string>
    <string name="friends">Amis</string>
    <string name="create">Créer</string>
    <string name="description">Description</string>
    <string name="location">Localisation</string>
    <string name="feed">Fil</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Génerer le QR Code</string>
    <string name="toggle_flash">Activer le Flash</string>
    <string name="action_settings">Réglages</string>
    <string name="scanned_data">Données scannés</string>
    <string name="creation">Création</string>
    <string name="get_to_location">Calculer l\'itinéraire</string>
    <string name="create_group">Créer un groupe</string>
    <string name="join_course">Rejoindre un groupe</string>
    <string name="name">Name:</string>
    <string name="itemCount">item_count</string>
    <string name="submit">Submit</string>
    <string name="ranking">Ranking :</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBNS_B8sdfPZIeZ_NzTaXuMLTeuZJ-KRtQ</string>
</resources>