<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Accueil"
    android:background="@drawable/accueil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_logo"
            app:backgroundTint="#25BF72"
            app:icon="@drawable/ic_compas"
            app:iconGravity="textTop"
            app:iconSize="@android:dimen/app_icon_size"
            app:iconTint="#FFFFFF"
            android:onClick="displayMap"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/ic_bg_textfield"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_map_marker_alt_solid"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#AEAAAA" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="RechercherCourse"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_search_location_solid"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#86E5B5" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:onClick="profile"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_user_circle_regular"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#1a8a52"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/history" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/course" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/profil" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_notification"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#25bf72" />

                <Button
                    android:id="@+id/createCourseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_icon_add"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#25bf72"
                    android:onClick="createCourse"/>

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_settings"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#515151"
                    android:onClick="settings"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/notification" />

                <TextView
                    android:id="@+id/textViewCreation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/creation" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>